[fix]: fix-problem-for-user-management-api
想定したURLがエラーになるためこれを修正。

Fixes #23